[metadata]
name = indico-fonts
version = 1.2
author = Indico Team
author_email = indico-team@cern.ch
license = Several
description = Indico - Binary fonts
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://getindico.io
classifiers =
    License :: Other/Proprietary License
    Topic :: Text Processing :: Fonts
platforms = any

[options]
packages = indico_fonts
zip_safe = False
include_package_data = True
